# itachi.pl

./: .gitignore  .gitmodules  antora-playbook.yml  antora.yml  package-lock.json  package.json  pyproject.toml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/ebus-raspberry/: comparator_graph.py  ebus-raspberry.rst  schematic.xcf
docs/nrf/: index.rst
docs/nrf-cmsis/: nrf-cmsis.rst
docs/nrf/gpio-keys/: gpio-keys.rst
journal/: antora.yml
modules/2022-08/: nav.adoc
modules/2022-08/pages/: 08.adoc
modules/ROOT/pages/: index.adoc
modules/brainfuck-assembler/: nav.adoc
modules/brainfuck-assembler/pages/: brainfuck-assembler.adoc
modules/initramfs-pi/attachments/: kernel_config
modules/initramfs-pi/pages/: initramfs-pi.adoc
modules/lacrosse-tx3/pages/: lacrosse-tx3.adoc
modules/remote-desktop-error-204/: nav.adoc
modules/remote-desktop-error-204/pages/: remote-desktop-error-204.adoc
modules/stm32-linker-script/: nav.adoc
modules/stm32-linker-script/pages/: stm32-linker-script.adoc
my-space/: antora.yml
sphinx/: Makefile  pyproject.toml
sphinx/docs/: conf.py  index.rst
sphinx/docs/brainfuck-assembler/: BfaLexer.g4
sphinx/docs/linker-script/: linker-script.rst
tech-blog/: antora.yml
tech-blog/modules/initramfs-pi/: nav.adoc
tech-blog/modules/lacrosse-tx3/: nav.adoc
tech-blog/modules/nec-parsing/: nav.adoc
tech-blog/modules/nrf-with-cmake/: nav.adoc
tech-blog/modules/u-boot-on-raspberry/: nav.adoc
ui/css/: custom.css
ui/partials/: head-styles.hbs  header-content.hbs  toolbar.hbs
(+16 files in other folders)
